--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,7 @@
 
     <body>
         <h1>I know a guy, what you need!?</h1>
+        <div id="root"></div>
 
     <script src="../js/bundle/scripts.js"></script>
 
